arg option to avoid live plotting

--- a/src/example.yaml
+++ b/src/example.yaml
@@ -9,8 +9,8 @@ PgnName: CaroKann_forBlack
 Color: Black
 #StartingPosition: Na3
 #StartingPosition: e2e4
-#StartingPosition: [e4, c6]
-StartingPosition: rnbqkbnr/pp1ppppp/2p5/8/4P3/8/PPPP1PPP/RNBQKBNR w KQkq - 0 2
+StartingPosition: [e4, c6]
+#StartingPosition: rnbqkbnr/pp1ppppp/2p5/8/4P3/8/PPPP1PPP/RNBQKBNR w KQkq - 0 2
 #StartingPosition: Meran.pgn
 MaxDepth: 12
 EngineLines: 3
