--- a/src/example.yaml
+++ b/src/example.yaml
@@ -5,11 +5,11 @@ speeds:
 ratings:
   - 2000
   - 2200
-PgnName: CaroKann_forBlack
-Color: Black
+PgnName: EnglishOpening
+Color: White
 #StartingPosition: Na3
-#StartingPosition: e2e4
-StartingPosition: [e4, c6]
+StartingPosition: c2c4
+#StartingPosition: [e4, c6]
 #StartingPosition: rnbqkbnr/pp1ppppp/2p5/8/4P3/8/PPPP1PPP/RNBQKBNR w KQkq - 0 2
 #StartingPosition: Meran.pgn
 MaxDepth: 10
